// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-ticket-rules-list Renders \`declare-ticket-rules-list\` with custom props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub
        value="Rule"
      />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="system_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                System name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Enabled: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="enabled"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Enabled
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Creation date: Sorted descending. Activate to remove sorting."
              aria-sort="descending"
              class="column active desc sortable text-xs-left"
              data-value="created"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Creation date
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified by
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              Actions
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="8"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear"
                role="progressbar"
                style="height: 2px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="height: 2px; opacity: 0.3; width: 100%;"
                />
                <div
                  class="v-progress-linear__bar"
                >
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                    >
                      <div
                        class="v-progress-linear__bar__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__bar__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                  <transition-stub
                    name="slide-x-transition"
                  />
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-0
            </td>
            <td>
              system-name-0
            </td>
            <td>
              <c-enabled-stub />
            </td>
            <td>
              04/03/2021 13:44:48
            </td>
            <td>
              04/03/2021 13:44:48
            </td>
            <td>
              author-name-0
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-1
            </td>
            <td>
              system-name-1
            </td>
            <td>
              <c-enabled-stub
                value="true"
              />
            </td>
            <td>
              04/03/2021 13:44:49
            </td>
            <td>
              04/03/2021 13:44:49
            </td>
            <td>
              author-name-1
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-2
            </td>
            <td>
              system-name-2
            </td>
            <td>
              <c-enabled-stub />
            </td>
            <td>
              04/03/2021 13:44:50
            </td>
            <td>
              04/03/2021 13:44:50
            </td>
            <td>
              author-name-2
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-3
            </td>
            <td>
              system-name-3
            </td>
            <td>
              <c-enabled-stub
                value="true"
              />
            </td>
            <td>
              04/03/2021 13:44:51
            </td>
            <td>
              04/03/2021 13:44:51
            </td>
            <td>
              author-name-3
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-4
            </td>
            <td>
              system-name-4
            </td>
            <td>
              <c-enabled-stub />
            </td>
            <td>
              04/03/2021 13:44:52
            </td>
            <td>
              04/03/2021 13:44:52
            </td>
            <td>
              author-name-4
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-5
            </td>
            <td>
              system-name-5
            </td>
            <td>
              <c-enabled-stub
                value="true"
              />
            </td>
            <td>
              04/03/2021 13:44:53
            </td>
            <td>
              04/03/2021 13:44:53
            </td>
            <td>
              author-name-5
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-6
            </td>
            <td>
              system-name-6
            </td>
            <td>
              <c-enabled-stub />
            </td>
            <td>
              04/03/2021 13:44:54
            </td>
            <td>
              04/03/2021 13:44:54
            </td>
            <td>
              author-name-6
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-7
            </td>
            <td>
              system-name-7
            </td>
            <td>
              <c-enabled-stub
                value="true"
              />
            </td>
            <td>
              04/03/2021 13:44:55
            </td>
            <td>
              04/03/2021 13:44:55
            </td>
            <td>
              author-name-7
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-8
            </td>
            <td>
              system-name-8
            </td>
            <td>
              <c-enabled-stub />
            </td>
            <td>
              04/03/2021 13:44:56
            </td>
            <td>
              04/03/2021 13:44:56
            </td>
            <td>
              author-name-8
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="layout c-checkbox-wrapper row justify-start"
              >
                <v-checkbox-functional-stub
                  hidedetails="true"
                  label=""
                  primary="primary"
                />
                <!---->
              </div>
            </td>
            <td>
              name-9
            </td>
            <td>
              system-name-9
            </td>
            <td>
              <c-enabled-stub
                value="true"
              />
            </td>
            <td>
              04/03/2021 13:44:57
            </td>
            <td>
              04/03/2021 13:44:57
            </td>
            <td>
              author-name-9
            </td>
            <td>
              <div
                class="layout row"
              >
                <c-action-btn-stub
                  type="edit"
                />
                <c-action-btn-stub
                  type="duplicate"
                />
                <c-action-btn-stub
                  type="delete"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub
    page="2"
    rows-per-page="10"
    total-items="50"
  />
</div>
`;

exports[`declare-ticket-rules-list Renders \`declare-ticket-rules-list\` with default props 1`] = `
<div
  class="c-advanced-data-table"
>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs4"
    >
      <c-search-field-stub />
    </div>
    <div
      class="flex xs12"
    >
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <!---->
      </transition-stub>
    </div>
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table theme--light"
      >
        <thead>
          <tr>
            <th
              aria-label="Name: Sorted ascending. Activate to sort descending."
              aria-sort="ascending"
              class="column active asc sortable text-xs-left"
              data-value="name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="System name: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="system_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                System name
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Enabled: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="enabled"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Enabled
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Creation date: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="created"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Creation date
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified on: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="updated"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified on
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Last modified by: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              data-value="author.display_name"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <div
                class="layout align-center"
              >
                Last modified by
                <span>
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                    style="font-size: 16px;"
                  >
                    arrow_upward
                  </i>
                </span>
              </div>
            </th>
            <th
              aria-label="Actions: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value="actions"
              role="columnheader"
              scope="col"
            >
              Actions
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="7"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="7"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <c-table-pagination-stub />
</div>
`;
